wip: ent kafka create
