# internal/kafka/internal/api/public/api/openapi.yaml
@@ -2014,6 +2014,7 @@ components:
       description: Schema for the request body sent to /kafkas POST
       example:
         reauthentication_enabled: true
+        cluster_id: cluster_id
         marketplace: marketplace
         billing_model: billing_model
         billing_cloud_account_id: billing_cloud_account_id
@@ -2053,6 +2054,10 @@ components:
           type: string
         billing_model:
           description: billing model to use
+          nullable: true
+          type: string
+        cluster_id:
+          description: enterprise OSD cluster ID to be used for kafka creation
           nullable: true
           type: string
       required:
