# internal/kafka/internal/handlers/validation.go
@@ -44,6 +44,11 @@ func ValidateBillingModel(kafkaRequestPayload *public.KafkaRequestPayload) handl
 			return errors.InvalidBillingAccount("invalid billing model: %s, only %v and %v are allowed", billingModel,
 				v1.BillingModelStandard, v1.BillingModelMarketplace)
 		}
+		// enterprise kafkas billing model validation
+		if *kafkaRequestPayload.ClusterId != "" && (billingModel != "" && billingModel != string(v1.BillingModelStandard)) {
+			return errors.InvalidBillingAccount("invalid billing model: %s, only %v is allowed", billingModel,
+				v1.BillingModelStandard)
+		}
 		return nil
 	}
 }
